--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Elite Contracting Solutions - Luxury Design System
+/* AS Consultants - Luxury Design System
 Navy Blue & Light Cream Palette - Louis Vuitton Inspired
 All colors MUST be HSL.
 */
